correct the portName and serviceName in frontend